src/third_party/blink/web_tests/virtual/web-components-v0-disabled/fast/dom/shadow/remove-styles-in-shadow-crash-3-expected.txt
CONSOLE ERROR: line 12: Uncaught TypeError: host.createShadowRoot is not a function
PASS if no crash
